--- a/.gitignore
+++ b/.gitignore
@@ -5,18 +5,10 @@ checkpoints/iwslt14.de-en/supertransformer/space1/tensorboard
 checkpoints/iwslt14.de-en/supertransformer/space1/*.pt
 subtransformer/
 process.sh
-!data/binary/iwslt14_de_en/
-data/binary/iwslt14_de_en/*
-!data/binary/iwslt14_de_en/*.tgz
-!data/binary/wmt16_en_de/
-data/binary/wmt16_en_de/*
-!data/binary/wmt14.en-de/*.tgz
-!data/binary/wmt14_en_fr/
-data/binary/wmt14_en_fr/*
-!data/binary/wmt14_en_fr/*.tgz
-!data/binary/wmt19_en_de/
-data/binary/wmt19_en_de/*
-!data/binary/wmt19_en_de/*.tgz
+data/binary/iwslt14_de_en/
+data/binary/wmt16_en_de/
+data/binary/wmt14_en_fr/
+data/binary/wmt19_en_de/
 downloaded_models/
 fairseq_original/
 fairseq_to_trace/
@@ -26,3 +18,23 @@ onnx_models/
 __pycache__/
 .DS_Store
 onnx_tracewarning.md
+
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
