--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,8 @@ data/binary/wmt16_en_de/
 data/binary/wmt14_en_fr/
 data/binary/wmt19_en_de/
 downloaded_models/
-errors/*.txt
+errors/onnx/*.txt
+errors/rknn/*.txt
 fairseq_original/
 fairseq_to_trace/
 fairseq.egg-info/
