--- a/configs/iwslt14.de-en/convert_onnx/super.yml
+++ b/configs/iwslt14.de-en/convert_onnx/super.yml
@@ -46,19 +46,19 @@ decoder-attention-heads: 4
 
 qkv-dim: 512
 
-# # SubTransformers search space
-# encoder-embed-choice: [640, 512]
-# decoder-embed-choice: [640, 512]
+# SubTransformers search space
+encoder-embed-choice: [640, 512]
+decoder-embed-choice: [640, 512]
 
-# encoder-ffn-embed-dim-choice: [2048, 1024, 512]
-# decoder-ffn-embed-dim-choice: [2048, 1024, 512]
+encoder-ffn-embed-dim-choice: [2048, 1024, 512]
+decoder-ffn-embed-dim-choice: [2048, 1024, 512]
 
-# encoder-layer-num-choice: [6]
-# decoder-layer-num-choice: [6, 5, 4, 3, 2, 1]
+encoder-layer-num-choice: [6]
+decoder-layer-num-choice: [6, 5, 4, 3, 2, 1]
 
-# encoder-self-attention-heads-choice: [4, 2]
-# decoder-self-attention-heads-choice: [4, 2]
-# decoder-ende-attention-heads-choice: [4, 2]
+encoder-self-attention-heads-choice: [4, 2]
+decoder-self-attention-heads-choice: [4, 2]
+decoder-ende-attention-heads-choice: [4, 2]
 
 # for arbitrary encoder decoder attention. -1 means attending to last one encoder layer
 # 1 means last two encoder layers, 2 means last three encoder layers
