--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 *.so
 .eggs/
 build/
-checkpoints/iwslt14.de-en/supertransformer/space1/tensorboard
-checkpoints/iwslt14.de-en/supertransformer/space1/*.pt
+checkpoints/
 process.sh
 data/binary/iwslt14_de_en/
 data/binary/wmt16_en_de/
@@ -11,6 +10,7 @@ data/binary/wmt19_en_de/
 downloaded_models/
 errors/onnx/*.txt
 errors/rknn/*.txt
+errors/rknn/convert_rknn/
 fairseq_original/
 fairseq_to_trace/
 fairseq.egg-info/
