--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.so
 .eggs/
+.vscode/
 build/
 checkpoints/
 process.sh
@@ -16,10 +17,7 @@ fairseq_to_trace/
 fairseq.egg-info/
 !latency_dataset/
 latency_dataset/
-!configs/iwslt14.de-en/latency_dataset/
-!configs/wmt14.en-de/latency_dataset/
-!configs/wmt14.en-fr/latency_dataset/
-!configs/wmt19.en-de/latency_dataset/
+!errors/latency_dataset/
 onnx_models/
 rknn_models/
 __pycache__/
