--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ errors/rknn/convert_rknn/
 fairseq_original/
 fairseq_to_trace/
 fairseq.egg-info/
+fairseq/data/data_utils_fast.cpp
+fairseq/data/token_block_utils_fast.c
 !latency_dataset/
 latency_dataset/
 !errors/latency_dataset
