--- a/configs/iwslt14.de-en/latency_dataset/npu.yml
+++ b/configs/iwslt14.de-en/latency_dataset/npu.yml
@@ -1,6 +1,6 @@
 lat-dataset-path: ./latency_dataset/iwslt14deen_npu.csv
 lat-dataset-size: 2000
-latgpu: True
+latnpu: True
 latiter: 20
 latsilent: True
 
