update configs, latency dataset.py, rknn wrapper

--- a/configs/wmt14.en-fr/latency_dataset/npu.yml
+++ b/configs/wmt14.en-fr/latency_dataset/npu.yml
@@ -1,7 +1,6 @@
 lat-dataset-path: ./latency_dataset/wmt14enfr_npu.csv
 lat-dataset-size: 2000
-cpu: True
-latcpu: True
+latnpu: True
 latiter: 20
 latsilent: True
 
