--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ errors/onnx/*.txt
 errors/rknn/*.txt
 errors/rknn/convert_rknn/
 errors/rknn/without_onnxsim/
+errors/rknn/without_cumsum/
 fairseq_original/
 fairseq_to_trace/
 fairseq.egg-info/
